--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,19 @@ h1 {
 .meters {
   text-align: center;
 }
+
+.fade-in {
+  opacity: 0;
+  animation-fill-mode: forwards;
+  animation-name: fadein;
+  animation-duration: 300ms;
+}
+
+@keyframes fadein {
+  0%  {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
