Improve meters & Home

--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,9 @@ h1 {
   text-align: center;
 }
 
-/* @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-} */
+.debug {
+  border: 1px solid gray;
+}
 
 .card {
   padding: 2em;
