--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  max-width: 480px;
   margin: 0 auto;
   padding: 2rem;
 }
@@ -12,13 +12,9 @@ h1 {
   border: 1px solid gray;
 }
 
-.card {
+/* .card {
   padding: 2em;
-}
-
-.meters {
-  text-align: center;
-}
+} */
 
 .fade-in-text {
   opacity: 0.04;
