--- a/src/components/Meters.css
+++ b/src/components/Meters.css
@@ -37,27 +37,12 @@ rect.negative.exclusion {
   animation-duration: 0;
 }
 
-.fade-in-meter {
-  opacity: 0;
-  animation-fill-mode: forwards;
-  animation-name: fadeinmeter;
-  animation-duration: 300ms;
-}
-
-@keyframes fadeinmeter {
-  0%  {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
 .fade-in-out-meter {
   opacity: 0;
   animation-fill-mode: forwards;
   animation-name: fadeinoutmeter;
-  animation-duration: 600ms;
+  /* animation-delay needs to be placed in tsx */
+  /* animation-duration needs to be placed in tsx */
 }
 
 @keyframes fadeinoutmeter {
