--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,17 @@ h1 {
   text-align: center;
 }
 
+.debug {
+  border: 1px dashed darkgray;
+}
+
+.debug::before {
+  content: "Debug:";
+  display: block;
+  color: darkgray;
+  margin-bottom: 8px;
+}
+
 .fade-in-text {
   opacity: 0.04;
   animation-fill-mode: forwards;
