--- a/src/components/Month.css
+++ b/src/components/Month.css
@@ -1,76 +1,60 @@
 @keyframes tear {
+  /* modified from https://www.reddit.com/r/svg/comments/1e3qehg/svg_animation_calendar_like/ */
   0% {
     transform: rotate(0deg) translateY(0);
     opacity: 1;
   }
-  20% {
+  10% {
     transform: rotate(9deg) translateY(20px);
     opacity: 1;
   }
-  70% {
+  35% {
     opacity: 1;
   }
-  100% {
+  70% {
     transform: rotate(-10deg) translateY(200px);
-    opacity: 0;
-  }
-}
-
-@keyframes page-fall {
-  0% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-  20% {
-    transform: translateY(20px);
-    opacity: 1;
-  }
-  70% {
     opacity: 1;
   }
   100% {
-    transform: translateY(200px);
+    transform: rotate(0deg) translateY(400px);
     opacity: 0;
   }
 }
 
-.page {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: block;
+.month-svg {
+  overflow: visible;
 }
 
 .page.old-month {
-  animation: tear 0.8s linear forwards;
+  animation: tear 800ms linear forwards;
   animation-delay: 0s;
   display: block;
-}
-
-.page.old-month text {
-  animation: page-fall 0.8s linear forwards;
-  animation-delay: 0s;
-}
-
-.page.new-month {
-  display: block;
-  opacity: 1; /* Show number 8 immediately without animation */
 }
 
 .page rect {
-  width: 320px;
-  height: 288px;
+  width: 960px;
+  height: 704px;
   stroke: #213547;
-  stroke-width: 4px;
-  stroke-dasharray: 50 50;
   fill: #ffffff;
 }
 
 .page text {
   font-family: Inter, Arial;
-  font-size: 120px;
+  font-size: 128px;
   fill: #213547;
   text-anchor: middle;
+}
+.calendar-bar {
+  width: 1024px;
+  height: 10px;
+  fill: #213547;
+}
+
+.calendar-perforate {
+  width: 960px;
+  height: 4px;
+  stroke: #213547;
+  stroke-width: 4px;
+  stroke-dasharray: 64 64;
+  fill: transparent;
 }
