--- a/src/components/Month.css
+++ b/src/components/Month.css
@@ -44,7 +44,8 @@
 
 .page text {
   font-family: Inter, Arial;
-  font-size: 16px;
+  font-size: 20px;
+  font-weight: bold;
   fill: #213547;
   text-anchor: middle;
 }
