--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Inter;
-  src: url('./Inter-VariableFont_opsz\,wght.ttf');
+  src: url('Inter-VariableFont_opsz\,wght.ttf');
 }
 
 :root {
