--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: Inter;
   /* in public dir */
-  src: url('./assets/Inter-VariableFont_opsz\,wght.ttf');
+  src: url('Inter-VariableFont_opsz\,wght.ttf');
 }
 
 :root {
