--- a/src/components/Month.css
+++ b/src/components/Month.css
@@ -1,7 +1,3 @@
-.month {
-  text-align: center;
-}
-
 @keyframes tear {
   /* modified from https://www.reddit.com/r/svg/comments/1e3qehg/svg_animation_calendar_like/ */
   0% {
@@ -23,6 +19,24 @@
     transform: rotate(0deg) translateY(64px);
     opacity: 0;
   }
+}
+
+@keyframes fade-out-calendar {
+  0% {
+    opacity: 1
+  }
+  50% {
+    opacity: 1
+  }
+  100% {
+    opacity: 0
+  }
+}
+
+.month {
+  text-align: center;
+  animation: fade-out-calendar 1600ms linear forwards;
+  animation-delay: 0s;
 }
 
 .month-svg {
